# flask-starter-03

./: .pre-commit-config.yaml  README.md  pyproject.toml
templates/: auth.html  edit.html  list.html
