[tool.poetry]
name = "stepik-03"
version = "0.1.0"
description = "Stepik Flask course project"
authors = ["i <ibelyalov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''
